@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Handle invalid file descriptors more gracefully.
+ socket/init.c: reset a file descriptor when closing it.
+ socket/loop.c: try to look up bad file descriptors and drop them.
+Nicolas Weeger 2008-01-04
+
 Win32 compilation fixes.
  common/logger.c: typo.
  include/win32.h: #define sleep.
